--- a/2023-main/Henry.html
+++ b/2023-main/Henry.html
@@ -9,8 +9,13 @@
 </head>
 <body>
     <header class="coxa">
-        <H1>COXA</H1>
+        <H1>SELECOXA</H1>
     </header>
     <img class="imagem" src="imagem1.jpg">
+    <h2>Principais Titulos do Coxudo</h2>
+<p> * Campeonato Brasileiro - 1985</p>
+<p> * Campeonato Brasileiro - Série B - 2007/2010</p>
+<p> * Campeonato Paranaense - 39x</p>
+<img class="imagem2" src="coritiba_comemora1985.gif">
 </body>
 </html>
